# agentic_solutions

./: .gitignore  README.md  cleanup_junk.py  env.template  fill_db.py  log_analyzer.py  mkdocs.yml  observability.py  pyproject.toml  requirements.txt  servicenow_final_config.yaml  servicenow_knowledge_http_server.py  servicenow_knowledge_sse_server.py  servicenow_table_http_server.py  servicenow_table_sse_server.py  start_servicenow_http_system.py  start_servicenow_sse_system.py  start_servicenow_system.py  start_system.py  status_servicenow_system.py  stop_servicenow_system.py  ui-switch.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OBSERVABILITY_GUIDE.md  api_mcp_usage.md  index.md
docs/_assets/: mermaid-init.js
mcp_agents/: servicenow_knowledge_sse_server.py  servicenow_table_sse_server.py
observability/: docker-compose.observability.yml  loki.yaml  mimir.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
observability/grafana/dashboards/: servicenow-mcp-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
openapi_specs/: servicenow_knowledge_api_final.json  servicenow_table_api_final.json
scripts/: check_mcp_sse.py  check_servicenow_endpoints.py  probe_mcp_via_api.py
tests/: test_comprehensive.py  test_config.py  test_servers.py
